# program-noop

./: .gitignore  Cargo.toml  README.md
cli/src/: main.rs
generate-types/: Cargo.toml
generate-types/src/: lib.rs
src/: lib.rs  tests.rs
