[package]
name = "program-noop"
version = "0.1.0"
authors = ["peg <ameba23@systemli.org>"]
license = "Unlicense"
edition = "2021"
repository = "https://github.com/ameba23/program-noop"

[workspace]
members = ["generate-types", ".", "cli"]
resolver = "2"

# strip debug info since that makes up a major part of Wasm blobs, see Wasm's `twiggy`
[profile.release]
strip = "debuginfo"

# This is required to compile programs to a wasm module and for use in rust libs
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
entropy-programs-core={ git="https://github.com/entropyxyz/programs.git", tag="v0.10.0" }
schemars = {version = "0.8.16", optional = true}
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:program-noop"

[package.metadata.component.dependencies]

# Metadata related to an Entropy program
[package.metadata.entropy-program]

# The docker image used to build this program
docker-image = "peg997/build-entropy-programs:version0.1"

# Configuration interface description
# interface-description = ""

[features]
std = ["schemars"]
